--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,7 @@
 <html>
     <body>
-        <form action="/login" method="post">
-        Username<input type="text" name="username"/>
-        Password <input type="password" name="password"/>
-        <input type="submit"/>
+       Welcome to our site
+       <a href="/login">Login now</a>
     </form>
 
     </body>
