--- a/public/login.html
+++ b/public/login.html
@@ -1,16 +1,3 @@
-<!-- <html>
-    <body>
-        Login EJS Page
-        <%=message%>
-        <form action="/login" method="post">
-        Username<input type="text" name="username"/>
-        Password <input type="password" name="password"/>
-        <input type="submit"/>
-    </form>
-
-    </body>
-</html> -->
-
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
   <head>
@@ -140,8 +127,7 @@
           class="img-fluid" alt="Sample image">
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-        <%=message%>
-        <form action="/login" method="post">
+        <form>
           <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
             <p class="lead fw-normal mb-0 me-3">Sign in with</p>
             <button type="button" class="btn btn-primary btn-floating mx-1">
@@ -163,15 +149,15 @@
 
           <!-- Email input -->
           <div class="form-outline mb-4">
-            <input type="text" id="form3Example3" class="form-control form-control-lg"
-              placeholder="Enter a valid Username" name="username" />
+            <input type="email" id="form3Example3" class="form-control form-control-lg"
+              placeholder="Enter a valid email address" />
             <label class="form-label" for="form3Example3">Email address</label>
           </div>
 
           <!-- Password input -->
           <div class="form-outline mb-3">
             <input type="password" id="form3Example4" class="form-control form-control-lg"
-              placeholder="Enter password"  name="password"/>
+              placeholder="Enter password" />
             <label class="form-label" for="form3Example4">Password</label>
           </div>
 
@@ -187,7 +173,7 @@
           </div>
 
           <div class="text-center text-lg-start mt-4 pt-2">
-            <button type="submit" class="btn btn-primary btn-lg"
+            <button type="button" class="btn btn-primary btn-lg"
               style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
             <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
                 class="link-danger">Register</a></p>
